--- a/index.html
+++ b/index.html
@@ -193,22 +193,22 @@ var wizardWidthHalf = wizardWidth/2;
 // Функция для управления скоростью файрболла
 function getFireballSpeed(left) {
 return left ? fireballSpeedLeft : fireballSpeedRight;
-}
+};
 
 // Функция для рассчета высоты мага
-function getWizardHeight() {
-return wizardHeight = heightCoefficient * wizardWidth;
-}
+function getWizardHeight(wizardWidth) {
+return getWizardHeight = heightCoefficient * wizardWidth;
+};
 
 // Функция для определения начального положения мага на стартовом экране по оси Х
 function getWizardX(width) {
 return getWizardX = width/2 - wizardWidthHalf;
-}
+};
 
 // Функция для определения начального положения мага на стартовом экране по оси Х
 function getWizardY(height) {
-return getWizardY = height/3 - wizardHeight;
-}
+return getWizardY = height/3 - getWizardHeight;
+};
 </script>
 <script src="js/game.js"></script>
 
