Сделан экран статистики

--- a/index.html
+++ b/index.html
@@ -205,11 +205,13 @@ function getWizardX(width) {
 return getWizardX = width/2 - wizardWidthHalf;
 };
 
-// Функция для определения начального положения мага на стартовом экране по оси Х
+// Функция для определения начального положения мага на стартовом экране по оси Y
 function getWizardY(height) {
 return getWizardY = height/3 - getWizardHeight;
 };
 </script>
+<script src="js/util.js"></script>
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
