--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@ return getWizardY = height/3 - getWizardHeight;
 </script>
 <script src="js/util.js"></script>
 <script src="js/stat.js"></script>
+<script src="js/setup.js"></script>
 <script src="js/game.js"></script>
 
 </body>
