Загрузка и отправка данных

--- a/index.html
+++ b/index.html
@@ -211,10 +211,11 @@ function getWizardY(height) {
 return getWizardY = height/3 - getWizardHeight;
 };
 </script>
+<script src="js/backend.js"></script>
 <script src="js/util.js"></script>
 <script src="js/stat.js"></script>
-<script src="js/setup.js"></script>
 <script src="js/game.js"></script>
 <script src="js/userdialog.js"></script>
+
 </body>
 </html>
